2006-01-10  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_init),
	(gst_ring_buffer_set_flushing), (gst_ring_buffer_start),
	(gst_ring_buffer_pause), (wait_segment):
	* gst-libs/gst/audio/gstringbuffer.h:
	  Name (private) union, makes Forte compiler happy (this time
	  for real) (#324900).

2006-01-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/audio/Makefile.am:
	  Link against libgstinterfaces, needed for mixer
	  and property probe stuff.

2006-01-09  Edward Hervey  <edward@fluendo.com>

	* gst-libs/gst/Makefile.am:

2006-01-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/audio/Makefile.am:
	* gst-libs/gst/audio/mixerutils.c:
	(gst_audio_mixer_filter_do_filter),
	(gst_audio_mixer_filter_check_element),
	(gst_audio_mixer_filter_probe_feature),
	(element_factory_rank_compare_func),
	(gst_audio_default_registry_mixer_filter):
	* gst-libs/gst/audio/mixerutils.h:
	  Add gst_audio_default_registry_mixer_filter() utility
	  function.

2006-01-03  Michael Smith  <msmith@fluendo.com>

	* gst/audioresample/resample.h:
	  As before, but for o_buf

2006-01-03  Michael Smith  <msmith@fluendo.com>

	* gst/audioresample/resample.h:
	  Declare struct _ResampleState.buffer as unsigned char *, not void *,
	  since we do arithmetic on it.

2006-01-02  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_init),
	(gst_ring_buffer_set_flushing), (gst_ring_buffer_start),
	(gst_ring_buffer_pause), (wait_segment):
	* gst-libs/gst/audio/gstringbuffer.h:
	  Sun's Forte compiler doesn't seem to like anonymous structs,
	  so use same setup as in GstBaseSrc (fixes #324900).

2005-12-30  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* gst/volume/Makefile.am:
	* gst/volume/demo.c:
          move old example to tests/examples/volume/volune.c
	* tests/examples/Makefile.am:
	* tests/examples/seek/seek.c: (main):